scss/custom.scss
$body-bg: white;
$body-color: rgb(57, 57, 57);
$primary: rgb(57, 57, 57);

$font-family-sans-serif: 'Poppins', sans-serif;

@import '../node_modules/bootstrap/scss/bootstrap';

// Site Colors
$color-white: #ffffff;
$color-grey: #adaeb7;
$color-black: rgb(57, 57, 57);
$color-gold: #d6ad60;

// PERSONAL UTILITIES //

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.color-gold {
  color: $color-gold;
}

header {
  display: grid;
  grid-template-columns: 25% 1fr 25%;
  height: 100px;
  background-color: $color-white;

  .logo {
    grid-column: 1/2;
    max-width: 100%;
    align-self: center;
    justify-self: left;
    margin-left: 1em;

    a {
      text-decoration: none;
      color: $color-black;

      .logo-content {
        font-size: 3em;
        margin: 0;

        .logo-content-2 {
          color: $color-gold;
        }
      }
    }
  }
}

// MENU POP OUT START //

@mixin transition {
  @for $i from 1 through 50 {
    &:nth-child(#{$i}) {
      transition: transform
        1s
        #{$i *
        0.08}s
        cubic-bezier(0.29, 1.4, 0.44, 0.96);
    }
  }
}

@mixin alpha-attribute($attribute, $color, $background) {
  $percent: alpha($color) * 100%;
  $opaque: opacify($color, 1);
  $solid-color: mix($opaque, $background, $percent);
  #{$attribute}: $solid-color;
  #{$attribute}: $color;
}

$main: $color-black;
$text: $color-white;

.drawer-list {
  position: fixed;
  right: 0;
  top: 0;
  height: 100vh;
  width: 80vw;
  transform: translate(100vw, 0);
  z-index: 100;
  opacity: 1;
  /* ie workaround */
  -ms-transform: translatex(-100vw);
  box-sizing: border-box;
  pointer-events: none;
  padding-top: 125px;
  transition: width 475ms ease-out, transform 450ms ease,
    border-radius 0.8s 0.1s ease;
  border-bottom-left-radius: 100vw;
  background-color: black;
  @media (min-width: 768px) {
    width: 40vw;
  }
  ul {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    overflow: auto;
    overflow-x: hidden;
    pointer-events: auto;
    font-family: $font-family-sans-serif;
  }
  li {
    list-style: none;
    text-transform: uppercase;
    pointer-events: auto;
    white-space: nowrap;
    box-sizing: border-box;
    transform: translatex(100vw);
    /* ie workaround */
    -ms-transform: translatex(-100vw);
    &:last-child {
      margin-bottom: 2em;
    }
    a {
      text-decoration: none;
      color: $text;
      text-align: left;
      display: block;
      padding: 1rem;
      font-size: calc(24px - 0.5vw);
      @media (min-width: 768px) {
        text-align: right;
        padding: 0.5rem;
      }
      &:hover {
        cursor: pointer;
      }
    }
  }
}

input.hamburger {
  display: none;
  &:checked {
    & ~ .drawer-list {
      transform: translatex(0);
      border-bottom-left-radius: 0;
      li {
        transform: translatex(0);
        @include transition;
        a {
          padding-right: 15px;
        }
      }
    }
    & ~ label {
      > i {
        background-color: transparent;
        transform: rotate(90deg);
        &:before {
          transform: translate(-50%, -50%) rotate(45deg);
        }
        &:after {
          transform: translate(-50%, -50%) rotate(-45deg);
        }
      }
    }
  }
}

label.hamburger {
  justify-self: right;
  margin-right: 2em;
  align-self: center;
  grid-column: 3/4;
  z-index: 9999;
  position: relative;
  display: block;
  height: 50px;
  width: 50px;
  &:hover {
    cursor: pointer;
  }
  > i {
    position: absolute;
    width: 100%;
    height: 2px;
    top: 50%;
    background-color: $color-gold;
    pointer-events: auto;
    transition-duration: 0.35s;
    transition-delay: 0.35s;
    &:before,
    &:after {
      position: absolute;
      display: block;
      width: 50%;
      height: 2px;
      left: 50%;
      background-color: $color-grey;
      content: '';
      transition: transform 0.35s;
      transform-origin: 50% 50%;
    }
    &:before {
      transform: translate(-50%, -14px);
    }
    &:after {
      transform: translate(-50%, 14px);
    }
  }
}

.landing {
  display: grid;
  height: 80vh;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  justify-items: center;
}

.intro {
  height: 100%;
  display: flex;
  align-items: center;
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
  align-items: center;

  .intro-p-div {
    grid-row: 1/2;
    grid-column: 1/2;
    justify-self: center;
  }

  // MENU POP OUT END //

  // TEXT FLIP START //

  .flip {
    justify-self: center;
    grid-column: 1/2;
    grid-row: 1/2;
  }

  .flip span {
    display: inline-block;
    font-size: 2.3em;
    text-transform: uppercase;
    animation: flip 4s infinite;
    animation-delay: calc(0.2s * var(--i));
  }
  @keyframes flip {
    0%,
    80% {
      transform: rotateY(360deg);
    }
  }

  // TEXT FLIP END //

  // TEXT GRADIENT START //

  .gradient-animation {
    text-transform: uppercase;
    background-image: linear-gradient(
      -225deg,
      $color-grey 0%,
      $color-black 50%,
      $color-gold 100%
    );
    background-size: auto auto;
    background-clip: border-box;
    background-size: 200% auto;
    background-clip: text;
    text-fill-color: transparent;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: textclip 2s linear infinite;
    display: inline-block;
  }

  @keyframes textclip {
    to {
      background-position: 200% center;
    }
  }

  // TEXT GRADIENT END //
}

// SCROLL ANIMATION START //

.anim-scroll {
  border: 2px solid $color-black;
  border-radius: 22px;
  height: 40px;
  position: relative;
  width: 20px;
  justify-self: center;

  &--wheel {
    animation: scroll 2.5s ease infinite;
    background: $color-gold;
    border-radius: 30px;
    height: 8px;
    left: calc(50% - 1.5px);
    position: absolute;
    right: 50%;
    top: 8px;
    width: 3px;
  }
}

@keyframes scroll {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(16px);
  }
  51% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translateY(0);
  }
}

// SCROLL ANIMATION END//

// IMAGE CONTAINER START //

.image-container {
  margin-top: 5em;
}

.image-container img {
  max-width: 100%;
  filter: grayscale(100%);
}

// IMAGE CONTAINER END //

